--- a/index.html
+++ b/index.html
@@ -368,16 +368,16 @@
             </ul>
         </div>
         <div>
-            <form>
-                <h3>Subscribe</h3>
-                <div>
-                    <input type="email" name="mail" id="mail" placeholder="E-mail">
-                </div>
-                <button type="submit">Subscribe
-                    <svg width="24" height="24">
+            <form class="form-footer">
+                <h3 class="form-title">Subscribe</h3>
+                <div class="footer-input">
+                    <input class="input-size" type="email" name="mail" id="mail" placeholder="E-mail">
+                <button class="form-btn" type="submit">Subscribe
+                    <svg class="footer-icon" width="24" height="24">
                         <use href="./images/symbol-defs.svg#frame"></use>
                     </svg>
                 </button>
+                </div>
             </form>
         </div>
         </div>
@@ -417,7 +417,9 @@
                     <span class="checkbox-icon"></span>
                     I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
             </div>
-            <button class="form-button" type="submit">Send</button>
+            <div class="form-button">
+            <button class="submit-btn" type="submit">Send</button>
+            </div>
         </form>
         <button class="modal-btn" type="button" data-modal-close>
             <svg class="modal-icon" width="8" height="8">
