--- a/index.html
+++ b/index.html
@@ -388,24 +388,25 @@
             <b class="form-text">Leave your contacts and we will call you back</b>
             <div class="form-field field-name">
                 <label class="form-name" for="name">Name</label>
+                <input class="" type="text" name="name" id="name" autofocus placeholder=" ">
                 <svg class="form-icon" width="18" height="24">
                     <use href="./images/symbol-defs.svg#person-black"></use>
                 </svg>
-                <input  type="text" name="name" id="name" autofocus placeholder=" ">
+                
             </div>
             <div class="form-field">
                 <label class="form-name" for="phone">Phone</label>
+                <input type="tel" name="phone" id="phone">
                 <svg class="form-icon" width="18" height="24">
                         <use href="./images/symbol-defs.svg#phone-black"></use>
                     </svg>
-                <input type="tel" name="phone" id="phone">
             </div>
             <div class="form-field">
                 <label class="form-name" for="mail">Email</label>
+                <input type="email" name="mail" id="mail">
                 <svg class="form-icon" width="18" height="24">
                         <use href="./images/symbol-defs.svg#email-black"></use>
                     </svg>
-                <input type="email"  name="mail" id="mail">
             </div>
             <div class="form-field">
                 <label class="form-name" for="comment">Comment</label>
