--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <label class="checkbox-name" for="checkbox">
                     <input class="checkbox-btn" type="checkbox" name="checkbox" id="checkbox">
                     <span class="checkbox-icon"></span>
-                    I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
+                    I accept the terms and conditions of the <a class="policy" href="#">Privacy Policy</a></label>
             </div>
             <div class="form-button">
             <button class="submit-btn" type="submit">Send</button>
