--- a/portfolio.html
+++ b/portfolio.html
@@ -234,6 +234,19 @@
                 </li>
             </ul>
         </div>
+        <div>
+            <form class="form-footer">
+                <h3 class="form-title">Subscribe</h3>
+                <div class="footer-input">
+                    <input class="input-size" type="email" name="mail" id="mail" placeholder="E-mail">
+                    <button class="form-btn" type="submit">Subscribe
+                        <svg class="footer-icon" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#frame"></use>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </footer>
 </body>
